@startuml class_zapovednik
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classFontSize 10
skinparam nodesep 35
skinparam ranksep 30

title Диаграмма классов — портал Zapovednik (рис. 2.3)

class User {
  +id: Integer
  +email: String
  +passwordHash: String
  +name: String
  +role: String
  +avatarUrl: String
  +isBlocked: Boolean
  +emailVerified: Boolean
  --
  +authenticate()
  +register()
  +update()
  +change_password()
  +has_role()
  +block()
}

class Reserve {
  +id: Integer
  +name: String
  +type: String
  +region: String
  +district: String
  +latitude: Real
  +longitude: Real
  +area: Real
  +description: String
  +isPublished: Boolean
  +phone: String
  +email: String
  +website: String
  --
  +get_by_id()
  +get_all()
  +get_filters()
  +create()
  +update()
  +delete()
}

class Photo {
  +id: Integer
  +reserveId: Integer
  +url: String
  --
  +get_by_reserve()
  +add()
  +delete()
}

class Favorite {
  +id: Integer
  +userId: Integer
  +reserveId: Integer
  --
  +get_by_user()
  +add()
  +remove()
}

class Review {
  +id: Integer
  +reserveId: Integer
  +userId: Integer
  +rating: Integer
  +comment: String
  +status: String
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +get_by_reserve()
  +get_by_user()
  +create()
  +update()
  +delete()
  +moderate()
}

class CuratedRoute {
  +id: Integer
  +slug: String
  +title: String
  +reserveIds: String
  +profile: String
  +distanceM: Integer
  +durationS: Integer
  +isPublished: Boolean
  --
  +get_all()
  +get_by_slug()
  +create()
  +update()
  +delete()
}

class UserSavedRoute {
  +id: Integer
  +userId: Integer
  +reserveId: Integer
  +profile: String
  +title: String
  +geojson: String
  +distanceM: Real
  +durationS: Real
  +createdAt: DateTime
  --
  +get_by_user()
  +get_by_id()
  +create()
  +delete()
}

class AuditLog {
  +id: Integer
  +userId: Integer
  +actionType: String
  +entityType: String
  +entityId: Integer
  +createdAt: DateTime
  --
  +log_action()
  +get_all()
}

class RoutingService {
  +build_route()
}

Reserve "1" *-- "0..*" Photo
User "1" -- "0..*" Favorite
Reserve "1" -- "0..*" Favorite
User "1" -- "0..*" Review
Reserve "1" -- "0..*" Review
User "1" -- "0..*" UserSavedRoute
Reserve "1" -- "0..*" UserSavedRoute
User "1" -- "0..*" AuditLog

Reserve ..> RoutingService : построение маршрута

@enduml
